--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "AngularJS playground project",
   "scripts": {
+    "bundle": "webpack",
+    "start-dev": "concurrently \"webpack --watch\"  \"http-server -p 8000\""
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,9 @@
   },
   "homepage": "https://github.com/nfmmonteiro/angularjs-playground#readme",
   "devDependencies": {
-    "angular": "^1.6.2"
+    "angular": "^1.6.2",
+    "concurrently": "^3.3.0",
+    "http-server": "^0.9.0",
+    "webpack": "^2.2.1"
   }
 }
