--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "angular": "^1.6.2",
     "concurrently": "^3.3.0",
     "http-server": "^0.9.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0"
   }
 }
