--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "homepage": "https://github.com/nfmmonteiro/angularjs-playground#readme",
   "devDependencies": {
     "angular": "^1.6.2",
-    "concurrently": "^3.3.0",
-    "http-server": "^0.9.0",
-    "webpack": "^2.2.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "concurrently": "^3.3.0",
+    "http-server": "^0.9.0",
+    "ng-cache-loader": "0.0.23",
+    "webpack": "^2.2.1"
   }
 }
