--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AngularJS playground project",
   "scripts": {
     "bundle": "webpack",
-    "start-dev": "concurrently \"webpack --watch\"  \"http-server -p 8000\""
+    "start-dev": "concurrently \"webpack --watch\"  \"http-server dist -o -p 8000\""
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "concurrently": "^3.3.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
     "ng-cache-loader": "0.0.23",
     "webpack": "^2.2.1"
