--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AngularJS playground project",
   "scripts": {
     "bundle": "webpack",
-    "start-dev": "concurrently \"webpack --watch\"  \"http-server dist -o -p 8000\""
+    "start-dev": "concurrently \"webpack --watch\"  \"http-server dist -o -p 8000\"",
+    "start": "webpack-dev-server --port 8000"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
     "ng-cache-loader": "0.0.23",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
