--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3",
     "ng-cache-loader": "0.0.23",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
