--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "bootstrap": "^3.3.7",
     "concurrently": "^3.3.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "ng-cache-loader": "0.0.23",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
