--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-server": "^0.9.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
+    "ng-annotate-loader": "^0.2.0",
     "ng-cache-loader": "0.0.23",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
