--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/nfmmonteiro/angularjs-playground#readme",
   "devDependencies": {
     "angular": "^1.6.2",
+    "angular-animate": "^1.6.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
