--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "AngularJS playground project",
   "scripts": {
-    "bundle": "webpack",
-    "start-dev": "concurrently \"webpack --watch\"  \"http-server dist -o -p 8000\"",
-    "start": "webpack-dev-server --port 8000"
+    "bundle": "NODE_ENV=prod webpack",
+    "start-dev": "concurrently \"NODE_ENV=dev webpack --watch\"  \"http-server dist -o -p 8000\"",
+    "start": "NODE_ENV=dev webpack-dev-server --port 8000"
   },
   "repository": {
     "type": "git",
