--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "angular-animate": "^1.6.2",
+    "angular-ui-bootstrap": "^2.5.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
